--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -26,6 +26,7 @@
                         <th>E-mail</th>
                         <th>First Name</th>
                         <th>Last Name</th>
+                        <th>Role</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -34,6 +35,7 @@
                         <td th:text="${user.email}">E-mail</td>
                         <td th:text="${user.firstName}">First Name</td>
                         <td th:text="${user.lastName}">Last Name</td>
+                        <td th:text="${user.role}">Role</td>
                     </tr>
                     </tbody>
                 </table>
