--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,10 +5,18 @@
     <title>Home</title>
     
 </head>
-<body>
+<body> 
     <div class="container text-center">
-        <h1>In Home Page</h1>
+        <h2><p>Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b></p></h2>
+        <h2>In Home Page</h2>
         <h3><a th:href="@{/admin}">Admin Privileges</a></h3>
+        <h3><a th:href="@{/books/addBook}">Add Books</a></h3>
+        <h3><a th:href="@{/books/listBooks}">List Books</a></h3>
+    </div>
+    <div>
+        <form th:action="@{/logout}" method="post">
+            <input type="submit" value="Sign Out" />
+        </form>
     </div>
 </body>
 </html>
