--- a/src/main/resources/templates/loginAndSignUp/signup_form.html
+++ b/src/main/resources/templates/loginAndSignUp/signup_form.html
@@ -34,6 +34,18 @@
                         <input type="text" th:field="*{lastName}" class="form-control" required />
                     </div>
                 </div>
+                <div class="form-group row">
+                    <label class="col-4 col-form-label">Phone Number: </label>
+                    <div class="col-8">
+                        <input type="text" th:field="*{phoneNumber}" class="form-control" required />
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-4 col-form-label">Address: </label>
+                    <div class="col-8">
+                        <input type="text" th:field="*{address}" class="form-control" required />
+                    </div>
+                </div>
                 <div>
                     <button type="submit" class="btn btn-primary">Sign Up</button>
                 </div>
