loan feature fixed

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,6 +12,7 @@
         <h3><a th:href="@{/admin}" th:if="${#request.userPrincipal.principal.role} == 'Admin'">Admin Privileges</a></h3>
         <h3><a th:href="@{/books/addBook}">Add Books</a></h3>
         <h3><a th:href="@{/books/listBooks}">List Books</a></h3>
+        <h3><a th:href="@{/changePassword}">Change Password</a></h3>
     </div>
     <div>
         <form th:action="@{/logout}" method="post">
