--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -7,6 +7,8 @@
 <body>
     <h2><p>Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b></p></h2>
     <h3><a th:href="@{/users}">List Users</a></h3>
-    <div><button class="btn btn-primary"><a th:href="@{/home}">Back</a></button></div>
+    <form th:action="@{/home}">
+        <div><button type="submit" class="btn btn-primary">Back</button></div>
+    </form>
 </body>
 </html>
