--- a/src/main/resources/templates/loginAndSignUp/changePasswordPage.html
+++ b/src/main/resources/templates/loginAndSignUp/changePasswordPage.html
@@ -22,7 +22,9 @@
                 </div>
             </div>
         </form>
-        <div><button class="btn btn-primary"><a th:href="@{/home}">Back</a></button></div>
+        <form th:action="@{/home}">
+            <div><button type="submit" class="btn btn-primary">Cancel</button></div>
+        </form>
     </div>
 </body>
 </html>
