added myBooks and CheckedOut Pages

--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -36,7 +36,7 @@
                     </tbody>
                 </table>
             </div>
-            <div><button class="btn btn-primary"><a th:href="@{/admin}">Back</a></button></div>
+            <div><a th:href="@{/admin}">Back</a></div>
         </div>
     </body>
 </html>
