new chanages in thymleaf

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,8 +45,8 @@
     <br>
     <h1 style="font-size:50px ;font-family:'Roboto Light'; text-align:center;">Welcome to Mutual Book Exchange Store</h1>
     <div class="d-grid gap-3 col-2 mx-auto">
-        <a class="btn btn-primary" href="@{/login}" role="button">Login</a>
-        <a class="btn btn-primary" href="@{/register}" role="button">Register Here</a>
+        <a class="btn btn-primary" th:href="@{/login}" role="button">Login</a>
+        <a class="btn btn-primary" th:href="@{/register}" role="button">Register Here</a>
     </div>
     <!-- <h3 style="text-align:center; font-size:18px; font-family: 'Microsoft Sans Serif';"><a th:href="@{/login}">Login</a></h3>
      <h3 style="text-align:center; font-size:18px; font-family: 'Microsoft Sans Serif'">Do not have an account?<br><a th:href="@{/register}">Register here</a></h3>
