--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,9 +6,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-
-
-
 </head>
 <body>
 <!--
@@ -25,25 +22,25 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@{/admin}" th:if="${#request.userPrincipal.principal.role} == 'Admin'">Admin Privileges</a>
+                    <a class="nav-link" th:href="@{/admin}" th:if="${#request.userPrincipal.principal.role} == 'Admin'">Admin Privileges</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@{/addBook}">Add Books</a>
+                    <a class="nav-link" th:href="@{/addBook}">Add Books</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@{/listBooks}">List Books</a>
+                    <a class="nav-link" th:href="@{/listBooks}">List Books</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@{/checkoutPage}">Checked Out</a>
+                    <a class="nav-link" th:href="@{/checkoutPage}">Checked Out</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@{/myBooksPage}">My Books</a>
+                    <a class="nav-link" th:href="@{/myBooksPage}">My Books</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@{/changePasswordPage}">Change Password</a>
+                    <a class="nav-link" th:href="@{/changePasswordPage}">Change Password</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@{/deleteAccountPage}">Delete Account</a>
+                    <a class="nav-link" th:href="@{/deleteAccountPage}">Delete Account</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav nav navbar-right">
