--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -6,8 +6,13 @@
         <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
         <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
         <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
     </head>
     <body>
+
         <div class="container text-center">
             <div>
                 <h1>List of Users</h1>
@@ -31,12 +36,12 @@
                         <td th:text="${user.firstName}">First Name</td>
                         <td th:text="${user.lastName}">Last Name</td>
                         <td th:text="${user.role}">Role</td>
-                        <td><a th:href="@{'/deleteUser/' + ${user.id}}">delete user</a></td>
+                        <td><a th:href="@{'/deleteUser/' + ${user.id}}">Delete User</a></td>
                     </tr>
                     </tbody>
                 </table>
             </div>
-            <div><a th:href="@{/admin}">Back</a></div>
+            <div><a class="btn btn-primary" th:href="@{/admin} role="button"">Back</a></div>
         </div>
     </body>
 </html>
