--- a/src/main/resources/templates/books/acceptBorrowRequestPage.html
+++ b/src/main/resources/templates/books/acceptBorrowRequestPage.html
@@ -3,11 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Borrow Request</title>
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
+    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
 </head>
-<body>
+<body class="bg-light vsc-initialized" data-new-gr-c-s-check-loaded="14.1057.0" data-gr-ext-installed="">
     <div class="container text-center">
-        <h1>Accept Borrow Request from <body th:text="${requestedByUserName}"></body> </h1>
-        <h2>Requested Number Of Days is <body th:text="${requestedNumberOfDays}"></body> </h2>
+        <br>
+        <br>
+        <h3>Do you want to Accept Borrow Request From <body th:text="${requestedByUserName}"></body> </h3>
+        <br>
+        <h3>Requested Number Of Days is <body th:text="${requestedNumberOfDays}"></body> </h3>
+        <p class="lead">Fill in the form to accept borrow request. All fields are required.</p>
+
         <form th:action="@{'/books/acceptBorrowRequest/' + ${bookId}}" th:object="${timeAndPlace}" method="post">
             <div class="m-3">
                 <div class="form-group row">
@@ -15,10 +27,12 @@
                     <div class="col-8"><input type="date" th:field="*{dateOfCollection}" class="form-control" required/></div>
                 </div>
             </div>
+            <br>
             <div class="form-group row">
                 <label class="col-4 col-form-label">Place of collection: </label>
                 <div class="col-8"><input type="text" th:field="*{placeOfCollection}" class="form-control" required/></div>
             </div>
+            <br>
             <div>
                 <button type="submit" class="btn btn-primary">Accept</button>
                 <button type="submit" class="btn btn-primary" form="form2">Decline</button>
