--- a/src/main/resources/templates/books/borrowRequestPage.html
+++ b/src/main/resources/templates/books/borrowRequestPage.html
@@ -3,17 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Borrow Book</title>
+    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
 </head>
-<body>
+<body class="bg-light vsc-initialized" data-new-gr-c-s-check-loaded="14.1057.0" data-gr-ext-installed="">
     <div class="container text-center">
-        <h1>For how many days you want the book?</h1>
+        <br>
+        <br>
+        <h2>Borrow Request Extension</h2>
+        <br>
+        <br>
         <form th:action="@{'/borrowRequest/' + ${bookId}}" method="post" th:object="${numberOfDays}">
-            <div class="form-group row">
-                <div class="col-8"><input type="number" min="1" max="15" th:field="*{numberOfDaysRequired}" class="form-control" required/></div>
-            </div>
+            <div class="g-3">
+                <div class="form-group row">
+                    <label class="col-4 col-form-label">For how many days you want the book? </label>
+                    <div class="col-8"><input type="number" min="1" max="15" th:field="*{numberOfDaysRequired}" class="form-control" required/></div>
+                </div>
+            <br>
             <div>
-                <button type="submit" class="btn btn-primary">Borrow</button>
-                <button type="submit" class="btn btn-primary" form="form2">Cancel</button>
+                <button type="submit" class="btn btn-primary">  Borrow  </button>
+                <button type="submit" class="btn btn-primary" form="form2">  Cancel  </button>
             </div>
         </form>
         <form id="form2" th:action="@{'/books/cancelBorrowRequest'}"}>
