--- a/src/main/resources/templates/books/form.html
+++ b/src/main/resources/templates/books/form.html
@@ -3,20 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>Add Book Form</title>
+    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
+    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+    <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
 </head>
-<body>
+
+<body class="bg-light vsc-initialized" data-new-gr-c-s-check-loaded="14.1057.0" data-gr-ext-installed="">
     <div class="container text-center">
-        <h1>Add New Book</h1>
+        <br>
+        <br>
+        <h2>Add New Book</h2>
+        <p class="lead">Fill in the form to add a new book. All fields are required.</p>
+
         <form th:action="@{/books/book_register}" th:object="${book}" method="post">
             <div class="m-3">
                 <div class="form-group row">
                     <label class="col-4 col-form-label">Title </label>
                     <div class="col-8"><input type="text" th:field="*{title}" class="form-control" required/></div>
                 </div>
+                <br>
                 <div class="form-group row">
                     <label class="col-4 col-form-label">Author </label>
                     <div class="col-8"><input type="text" th:field="*{author}" class="form-control" required/></div>
                 </div>
+                <br>
                 <div>
                     <button type="submit" class="btn btn-primary">Add Book</button>
                 </div>
