--- a/src/main/resources/templates/books/listBooks.html
+++ b/src/main/resources/templates/books/listBooks.html
@@ -6,10 +6,30 @@
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
 </head>
 <body>
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="https://source.unsplash.com/1200x200/?book,store" class="d-block w-100" alt="...">
+        </div>
+
+    </div>
+
+</div>
+<br>
     <div class="container text-center">
-        <div><h3>List Books</h3><div>
+        <div><h3>Our Collection</h3><div>
+            <br>
         <div>
             <table class="table table-striped table-bordered">
                 <thead class="thread-dark">
@@ -88,7 +108,9 @@
                 </tbody>
             </table>
         </div>
-        <div><a th:href="@{/home}">Back</a></div>
+            <div>
+                <a th:href="@{/home}" class="btn btn-outline-success" tabindex="-1" role="button" aria-disabled="true">Back
+        </a></div>
     </div>
     <script th:src="@{/custom/js/book/list.js}"></script>
 </body>
