few changes in html pages

--- a/src/main/resources/templates/books/addSuccessful.html
+++ b/src/main/resources/templates/books/addSuccessful.html
@@ -18,7 +18,7 @@
     <main class="px-3">
         <h1>Book Added Sucessfully!!</h1>
     <br>
-    <a th:href="@{/books/addBook}" class="btn btn-lg btn-secondary fw-bold border-white">Add another?</a>
+    <a th:href="@{/addBook}" class="btn btn-lg btn-secondary fw-bold border-white">Add another?</a>
     <a th:href="@{/home}" class="btn btn-lg btn-secondary fw-bold border-white">Home Page</a>
 </div>
 </body>
