--- a/src/main/resources/templates/books/myBooksPage.html
+++ b/src/main/resources/templates/books/myBooksPage.html
@@ -9,11 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-
-<<<<<<< HEAD
-
-=======
->>>>>>> 2b578caeb967a55ea4027c3e7a4081b4469d42dd
 </head>
 <body>
     <div class="container text-center">
@@ -36,7 +31,7 @@
                     <!--Accept and Decline-->
                     <td th:if="${book.pendingStatus}">
                         <body th:text="'Requested By: ' + ${book.requestedByUserName}"></body>
-                        <form th:action="@{'/books/acceptBorrowRequest/' + ${book.id}}" method="post">
+                        <form th:action="@{'/books/acceptBorrowRequestPage/' + ${book.id}}">
                             <input type="submit" value="Accept" />
                             <input type="submit" value="Decline" form="thirdForm"/>
                         </form>
