--- a/src/main/resources/templates/books/form.html
+++ b/src/main/resources/templates/books/form.html
@@ -16,26 +16,29 @@
     <div class="container text-center">
         <br>
         <br>
-        <h2>Add New Book</h2>
-        <p class="lead">Fill in the form to add a new book. All fields are required.</p>
-
-        <form th:action="@{/books/book_register}" th:object="${book}" method="post">
-            <div class="m-3">
+        <h2>Add a Book</h2>
+        <p class="lead">Fill in the form to contribute to our collection. All fields are required.</p>
+<br>
+        <form th:action="@{/books/book_register}" th:object="${book}" method="post" style="max-width: 600px; margin: 0 auto;">
+            <div class="row g-3">
                 <div class="form-group row">
                     <label class="col-4 col-form-label">Title </label>
                     <div class="col-8"><input type="text" th:field="*{title}" class="form-control" required/></div>
                 </div>
+                <br>
                 <br>
                 <div class="form-group row">
                     <label class="col-4 col-form-label">Author </label>
                     <div class="col-8"><input type="text" th:field="*{author}" class="form-control" required/></div>
                 </div>
                 <br>
+                <br>
                 <div>
                     <button type="submit" class="btn btn-primary">Add Book</button>
                 </div>
             </div>
         </form>
+        <br>
         <form th:action="@{/home}">
             <div><button type="submit" class="btn btn-primary">Cancel</button></div>
         </form>
