--- a/src/main/resources/templates/DeleteAccount/deleteAccountPage.html
+++ b/src/main/resources/templates/DeleteAccount/deleteAccountPage.html
@@ -59,16 +59,18 @@
         <br>
 
         <form th:action="@{/deleteAccount}">
-            <div><button type="submit" class="btn btn-outline-primary">Delete</button></div>
+            <div><button type="submit" class="btn btn-outline-primary">Delete</button>
+                <button type="submit" class="btn btn-outline-primary" form="form2">  Cancel  </button>
+            </div>
         </form>
 <br>
-        <form th:action="@{/deleteAccountCancelRequest}">
-            <div><button type="submit" class="btn btn-outline-primary">Cancel</button></div>
+        <form>
+            <form id="form2" th:action="@{/deleteAccountCancelRequest}"}>
         </form>
     </div>
 </main>
 <br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <footer class="footer mt-auto py-3 bg-light">
     <div class="container">
         <span class="text-muted">Mutual Book Exchange Portal</span>
