--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -3,12 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h2><p>Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b></p></h2>
-    <h3><a th:href="@{/users}">List Users</a></h3>
-    <form th:action="@{/home}">
-        <div><button type="submit" class="btn btn-primary">Back</button></div>
-    </form>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Book Exchange Portal</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="nav nav-pills nav-fill">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/users}">List Users</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav nav navbar-right">
+                <li class="nav-item">
+
+                    <div>
+                        <form th:action="@{/home}" method="post">
+                            <input type="submit" value="Back" />
+                        </form>
+                    </div>
+
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="https://source.unsplash.com/1200x300/?quotes,books" class="d-block w-100" alt="...">
+        </div>
+    </div>
+</div>
+<br>
+<h2><p class="text-center fs-3">Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b></p></h2>
 </body>
 </html>
