--- a/src/main/resources/templates/books/checkoutPage.html
+++ b/src/main/resources/templates/books/checkoutPage.html
@@ -12,9 +12,25 @@
 
 </head>
 <body>
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="https://source.unsplash.com/1200x200/?book,store" class="d-block w-100" alt="...">
+        </div>
+
+    </div>
+
+</div>
 
     <div class="container text-center">
+        <br>
         <div><h3>Checked Out Books</h3></div>
+        <br>
         <table class="table table-striped table-bordered">
             <thead class="thread-dark">
                 <tr>
@@ -45,7 +61,7 @@
                 </tr>
             </tbody>
         </table>
-        <div><a class="btn btn-primary" th:href="@{/home}" role="button">Back </a></div>
+        <div><a class="btn btn-outline-success" th:href="@{/home}" role="button">Back </a></div>
     </div>
 </body>
 </html>
