--- a/src/main/resources/templates/books/form.html
+++ b/src/main/resources/templates/books/form.html
@@ -35,12 +35,13 @@
                 <br>
                 <div>
                     <button type="submit" class="btn btn-primary">Add Book</button>
+                    <button type="submit" class="btn btn-primary" form="form2">  Cancel  </button>
                 </div>
             </div>
         </form>
         <br>
-        <form th:action="@{/home}">
-            <div><button type="submit" class="btn btn-primary">Cancel</button></div>
+        <form>
+            <form id="form2" th:action="@{/home}"}>
         </form>
     </div>
 </body>
