--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,13 +21,13 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="book1.jpg" class="d-block w-100" alt="...">
+            <img th:src="@{pictures/book1.jpg}" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="book2.jpg" class="d-block w-100" alt="...">
+            <img th:src="@{pictures/book2.jpg}" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="book3.jpg" class="d-block w-100" alt="...">
+            <img th:src="@{pictures/book3.jpg}" class="d-block w-100" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
