--- a/src/main/resources/templates/accessDenied.html
+++ b/src/main/resources/templates/accessDenied.html
@@ -4,8 +4,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -14,8 +12,6 @@
     <title>Sticky Footer Template · Bootstrap v5.1</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sticky-footer/">
-
-
 
     <!-- Bootstrap core CSS -->
     <link href="/docs/5.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -28,8 +24,7 @@
     <link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
     <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
     <meta name="theme-color" content="#7952b3">
-
-
+    
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -45,12 +40,9 @@
             }
         }
     </style>
-
-
     <!-- Custom styles for this template -->
     <link href="sticky-footer.css" rel="stylesheet">
 </head>
-
 
 <body class="d-flex flex-column h-100 vsc-initialized" data-new-gr-c-s-check-loaded="14.1057.0" data-gr-ext-installed="">
 
@@ -59,7 +51,7 @@
     <div class="container">
         <h1 class="mt-5">Access Denied</h1>
         <p class="lead">You are not authorized to perform this action</p>
-        <p class="lead"><a th:href="@{/home}">Back to Home Page</a></p>
+        <form th:action="@{/home}"><button type="submit" class="btn btn-link">Home Page</button></form>
     </div>
 </main>
 
@@ -69,40 +61,4 @@
     </div>
 </footer>
 
-
-
-
-
 </body></html>
-<!--
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Access Denied</title>
-</head>
-<body style="background-color:darkseagreen;">
-    <div class="container text-center">
-        <br>
-        <br>
-        <br>
-
-        <h1 style="text-align:center; font-size:30px; font-family: 'Microsoft Sans Serif';">You are not authorized to perform this action</h1>
-        <h3 style="text-align:center; font-size:20px; font-family: 'Microsoft Sans Serif';"><a th:href="@{/home}">Back to Home Page</a></h3>
-    </div>
-</body>
-</html>-->
-
-
-<!--<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Access Denied</title>
-</head>
-<body>
-    <div class="container text-center">
-        <h1>You are not authorized to perform this action</h1>
-        <h3><a th:href="@{/home}">Back to Home Page</a></h3>
-    </div>
-</body>
-</html>-->
