--- a/src/main/resources/templates/admin/generateReport.html
+++ b/src/main/resources/templates/admin/generateReport.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Generate Report</title>
+    <title>List Users</title>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
@@ -11,10 +11,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container text-center">
-    <div>
-        <h1>List of Users</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Book Exchange Portal</a>
     </div>
+</nav>
+</div>
+<div class="container text-center">
+    <div><br>
+        <h1>List of Users</h1>
+    </div><br>
     <div>
         <table class="table table-striped table-bordered">
             <thead class="thead-dark">
@@ -34,12 +40,12 @@
                 <td th:text="${user.firstName}">First Name</td>
                 <td th:text="${user.lastName}">Last Name</td>
                 <td th:text="${user.role}">Role</td>
-                <td><a th:href="@{'/deleteUser/' + ${user.id}}">Generate Report</a></td>
+                <td><a th:href="@{'/generateReport/' + ${user.id}}">Generate Report</a></td>
             </tr>
             </tbody>
         </table>
     </div>
-    <div><a class="btn btn-primary" th:href="@{/admin}" role="button">Back</a></div>
+    <div><a class="btn btn-link" th:href="@{/admin}" role="button">Back</a></div>
 </div>
 </body>
 </html>
