--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -8,49 +8,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </head>
 <body>
-<<<<<<< Updated upstream
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Book Exchange Portal</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="nav nav-pills nav-fill">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/users}">List Users</a>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav nav navbar-right">
-                <li class="nav-item">
-
-                    <div>
-                        <form th:action="@{/home}" method="post">
-                            <input type="submit" value="Back" />
-                        </form>
-                    </div>
-
-                </li>
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Book Exchange Portal</a>
         </div>
-    </div>
-</nav>
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="https://source.unsplash.com/1200x300/?quotes,books" class="d-block w-100" alt="...">
-        </div>
-    </div>
-</div>
-<br>
-<h2><p class="text-center fs-3">Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b></p></h2>
-=======
-    <h2><p>Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b></p></h2>
-    <h3><a th:href="@{/users}">List Users</a></h3>
-    <h3><a th:href="@{/generateReport}">Generate Report</a></h3>
-    <form th:action="@{/home}">
-        <div><button type="submit" class="btn btn-primary">Back</button></div>
-    </form>
->>>>>>> Stashed changes
+    </nav>
+    <br>
+    <h1><p class="text-center fs-3">Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b></p></h1>
+    <form th:action="@{/users}"><button type="submit" class="btn btn-link">List Users</button></form>
+    <form th:action="@{/generateReportPage}"><button type="submit" class="btn btn-link">Generate Report</button></form>
+    <form th:action="@{/home}"><button type="submit" class="btn">Back</button></form>
 </body>
+<script type='text/javascript'>
+    window.onload = function() {
+        if(!window.location.hash) {
+            window.location = window.location + '#loaded';
+            window.location.reload();
+        }
+    }
+</script>
 </html>
