--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -11,49 +11,41 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     </head>
     <body>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://source.unsplash.com/1200x200/?book,store" class="d-block w-100" alt="...">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Book Exchange Portal</a>
             </div>
-
+        </nav>
         </div>
-
-    </div>
-        <div class="container text-center">
-            <div><br>
-                <h1>List of Users</h1>
-            </div><br>
-            <div>
-                <table class="table table-striped table-bordered">
-                    <thead class="thead-dark">
-                    <tr>
-                        <th>User ID</th>
-                        <th>E-mail</th>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Role</th>
-                        <th></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="user: ${listUsers}">
-                        <td th:text="${user.id}">User ID</td>
-                        <td th:text="${user.email}">E-mail</td>
-                        <td th:text="${user.firstName}">First Name</td>
-                        <td th:text="${user.lastName}">Last Name</td>
-                        <td th:text="${user.role}">Role</td>
-                        <td><a th:href="@{'/deleteUser/' + ${user.id}}">Delete User</a></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div><a class="btn btn-outline-success" th:href="@{/admin}" role="button">Back</a></div>
+            <div class="container text-center">
+                <div><br>
+                    <h1>List of Users</h1>
+                </div><br>
+                <div>
+                    <table class="table table-striped table-bordered">
+                        <thead class="thead-dark">
+                        <tr>
+                            <th>User ID</th>
+                            <th>E-mail</th>
+                            <th>First Name</th>
+                            <th>Last Name</th>
+                            <th>Role</th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="user: ${listUsers}">
+                            <td th:text="${user.id}">User ID</td>
+                            <td th:text="${user.email}">E-mail</td>
+                            <td th:text="${user.firstName}">First Name</td>
+                            <td th:text="${user.lastName}">Last Name</td>
+                            <td th:text="${user.role}">Role</td>
+                            <td><a th:href="@{'/deleteUser/' + ${user.id}}">Delete User</a></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            <div><a class="btn btn-link" th:href="@{/admin}" role="button">Back</a></div>
         </div>
     </body>
 </html>
