--- a/src/main/resources/templates/books/borrowRequestPage.html
+++ b/src/main/resources/templates/books/borrowRequestPage.html
@@ -24,8 +24,8 @@
             </div>
             <br>
             <div>
-                <button type="submit" class="btn btn-primary">  Borrow  </button>
-                <button type="submit" class="btn btn-primary" form="form2">  Cancel  </button>
+                <button type="submit" class="btn btn-success">  Borrow  </button>
+                <button type="submit" class="btn btn-default" form="form2">  Cancel  </button>
             </div>
         </form>
         <form id="form2" th:action="@{'/books/cancelBorrowRequest'}"}>
