--- a/src/main/resources/templates/books/myBooksPage.html
+++ b/src/main/resources/templates/books/myBooksPage.html
@@ -11,22 +11,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </head>
 <body>
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="https://source.unsplash.com/1200x200/?book,store" class="d-block w-100" alt="...">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img th:src="@{pictures/book7.jpg}" class="d-block w-100" alt="...">
+            </div>
         </div>
-
     </div>
-
-</div>
+    <br>
     <div class="container text-center">
         <div><h3>My Books</h3></div>
+        <br>
         <table class="table table-striped table-bordered">
             <thead class="thread-dark">
                 <tr>
