--- a/src/main/resources/templates/loginAndSignUp/changePasswordPage.html
+++ b/src/main/resources/templates/loginAndSignUp/changePasswordPage.html
@@ -12,6 +12,11 @@
 
 </head>
 <body class="bg-light vsc-initialized" data-new-gr-c-s-check-loaded="14.1057.0" data-gr-ext-installed="">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" th:href="@{/home}">Book Exchange Portal</a>
+        </div>
+    </nav>
     <div class="container text-center">
         <br>
         <br>
@@ -33,14 +38,15 @@
                     </div>
                     <br>
                     <div>
-                        <button type="submit" class="btn btn-primary">Change Password</button>
+                        <button type="submit" class="btn btn-success">Change Password</button>
+                        <button type="submit" class="btn btn-default" form="secondForm">Cancel</button>
                     </div>
                 </div>
             </form>
         </div>
         <br>
-        <form th:action="@{/home}">
-            <div><button type="submit" class="btn btn-primary">Cancel</button></div>
+        <form th:action="@{/home}" id="secondForm">
+            <div></div>
         </form>
     </div>
 </body>
