--- a/src/main/resources/templates/loginAndSignUp/signup_form.html
+++ b/src/main/resources/templates/loginAndSignUp/signup_form.html
@@ -74,13 +74,14 @@
             <br>
             <br>
             <div class="d-grid gap-2 col-3 mx-auto">
-                <button type="submit" class="btn btn-primary">Sign Up</button>
+                <button type="submit" class="btn btn-success">Sign Up</button>
+                <button type="submit" class="btn btn-default" form="secondForm">Cancel</button>
             </div>
         </div>
     </form>
-
-
-
+    <form th:action="@{/firstPage}" id="secondForm">
+        <div></div>
+    </form>
 </div>
 </body>
 </html>
