Site name updated

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,10 +36,11 @@
             </button>
         </div>
         
-        <div class="container">
+        <div class="container text-center">
             <br>
             <br>
-            <h1 style="font-size:50px; text-align:center;" class="display-1">Welcome to Mutual Book Exchange Store</h1>
+            <h1 style="font-size:50px; text-align:center;" class="display-1">Welcome To KitaabX</h1>
+            <p class="lead"> A Friendly Place for Book Exchange</p>
             <br>
             <div class="d-grid gap-3 col-2 mx-auto">
                 <a class="btn btn-primary" th:href="@{/login}" role="button">Login</a>
